--- a/css/main.css
+++ b/css/main.css
@@ -1383,6 +1383,10 @@ u {
         margin: 30px 0;
         overflow-x: hidden; } }
 
+.company-media {
+  text-align: center;
+  margin: 2rem; }
+
 * {
   padding: 0;
   margin: 0;
