--- a/scss/pages/_people.scss
+++ b/scss/pages/_people.scss
@@ -7,98 +7,112 @@
     }
   }
 }
-.peoples-media{
-    display:none;
+
+.peoples-media {
+  display: none;
 }
 
-.grid{
-    display:grid;
-    grid-template-columns: repeat(3,1fr);
-    margin-top: -15rem;
-    margin-left: 5rem;
-    
-.item1{
-    margin-top:24rem;
-   margin-left:3rem;
+.grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  margin-top: -15rem;
+  margin-left: 5rem;
+  .item1 {
+      margin-top: 24rem;
+      margin-left: 17rem;
+  }
+  .item2 {
+      margin-top: 19rem;
+   margin-left: 0.5rem;
+  }
+  .item3 {
+      margin-left: -17rem;
+  }
+  .item4 {
+      margin-left: 22rem;
+  }
+  .item5 {
+      margin-top: -11rem;
+      margin-left: 0.5rem;
+  }
+  .item6 {
+      margin-top: -11rem;
+      margin-left: -1.5rem;
+  }
 }
 
-.item2{
-    margin-top:19rem;
-    margin-left:-0.7rem;
+.item7 {
+  margin-left: 73rem;
+  margin-top: -20rem;
 }
 
-.item3{
-    margin-left: -15rem;  
-}
-.item4{
-  margin-left: 8rem;  
-}
-
-.item5{
-margin-top: -11rem;
-margin-left:-0.5rem;
-}
-
-.item6{
-    margin-top: -11rem;
-    margin-left:0.5rem;
-    
+@media(max-width:580px) {
+  .grid {
+      display: none;
+  }
+  .item7 {
+      display: none;
+  }
+  .footer-writeup {
+      display: none;
+  }
+  .peoples-media {
+      display: block;
+  }
 }
 
-
-
+@media(max-width:768px) {
+  .grid {
+      display: none;
+  }
+  .item7 {
+      display: none;
+  }
+  .footer-writeup {
+      display: none;
+  }
+  .peoples-media {
+      display: block;
+  }
 }
 
-.item7{
-    margin-left:59rem;
-    margin-top: -20rem;
-}
-
-@media(max-width:580px){
-    .grid{
-        display:none;
-    }
-    .item7{
-        display:none;
-    }
-    .footer-writeup{
-        display:none;
-    }
-    .peoples-media{
-        display:block;
-    }
-}
-
-
-.peoples-media-grid{
-    display:grid;
-    grid-template-columns: repeat(3,1fr);
-    margin-top:2rem;
-    overflow:hidden;
-    .item-1-media{margin-left:4rem;
-        margin-top:5rem;
-    }
-    .item-2-media{
-        margin-top:5rem;
-    }
-    .item-3-media{margin-left:-2.5rem;
-    }
-    .item-4-media{margin-left:7rem;
-    }
-    .item-5-media{margin-top:-3rem;
-    }
-    .item-6-media{margin-top:-3rem;
-        margin-right:8rem;
-    }
-
-
-
-
-}
-
-.item-7-media{
-    margin-left:18.8rem;
-    margin-top:-5rem;
+.peoples-media {
+  .peoples-media-writeup {
+      margin-top: 2rem;
+      margin-left: 15rem;
+      margin-bottom: 2.5rem
+  }
+  .peoples-media-grid {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      margin-top: 2rem;
+      overflow: hidden;
+      .item-1-media {
+          margin-left: 12.5rem;
+          margin-top: 5rem;
+      }
+      .item-2-media {
+          margin-top: 5rem;
+      }
+      .item-3-media {
+          margin-left: -3rem;
+          margin-top: 0.5rem;
+      }
+      .item-4-media {
+          margin-left: 15.7rem;
+      }
+      .item-5-media {
+          margin-top: -3rem;
+      }
+      .item-6-media {
+          margin-top: -3rem;
+          margin-right: 15rem;
+      }
+  }
+  .item-7-media {
+      margin-left: 27.2rem;
+      margin-top: -5rem;
+  }
 }
 
   *,
