peoples/section/rebased

--- a/css/main.css
+++ b/css/main.css
@@ -1562,23 +1562,23 @@ u {
   margin-left: 5rem; }
   .grid .item1 {
     margin-top: 24rem;
-    margin-left: 3rem; }
+    margin-left: 17rem; }
   .grid .item2 {
     margin-top: 19rem;
-    margin-left: -0.7rem; }
+    margin-left: 0.5rem; }
   .grid .item3 {
-    margin-left: -15rem; }
+    margin-left: -17rem; }
   .grid .item4 {
-    margin-left: 8rem; }
+    margin-left: 22rem; }
   .grid .item5 {
     margin-top: -11rem;
-    margin-left: -0.5rem; }
+    margin-left: 0.5rem; }
   .grid .item6 {
     margin-top: -11rem;
-    margin-left: 0.5rem; }
+    margin-left: -1.5rem; }
 
 .item7 {
-  margin-left: 59rem;
+  margin-left: 73rem;
   margin-top: -20rem; }
 
 @media (max-width: 580px) {
@@ -1591,28 +1591,44 @@ u {
   .peoples-media {
     display: block; } }
 
-.peoples-media-grid {
+@media (max-width: 768px) {
+  .grid {
+    display: none; }
+  .item7 {
+    display: none; }
+  .footer-writeup {
+    display: none; }
+  .peoples-media {
+    display: block; } }
+
+.peoples-media .peoples-media-writeup {
+  margin-top: 2rem;
+  margin-left: 15rem;
+  margin-bottom: 2.5rem; }
+
+.peoples-media .peoples-media-grid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   margin-top: 2rem;
   overflow: hidden; }
-  .peoples-media-grid .item-1-media {
-    margin-left: 4rem;
+  .peoples-media .peoples-media-grid .item-1-media {
+    margin-left: 12.5rem;
     margin-top: 5rem; }
-  .peoples-media-grid .item-2-media {
+  .peoples-media .peoples-media-grid .item-2-media {
     margin-top: 5rem; }
-  .peoples-media-grid .item-3-media {
-    margin-left: -2.5rem; }
-  .peoples-media-grid .item-4-media {
-    margin-left: 7rem; }
-  .peoples-media-grid .item-5-media {
+  .peoples-media .peoples-media-grid .item-3-media {
+    margin-left: -3rem;
+    margin-top: 0.5rem; }
+  .peoples-media .peoples-media-grid .item-4-media {
+    margin-left: 15.7rem; }
+  .peoples-media .peoples-media-grid .item-5-media {
     margin-top: -3rem; }
-  .peoples-media-grid .item-6-media {
+  .peoples-media .peoples-media-grid .item-6-media {
     margin-top: -3rem;
-    margin-right: 8rem; }
+    margin-right: 15rem; }
 
-.item-7-media {
-  margin-left: 18.8rem;
+.peoples-media .item-7-media {
+  margin-left: 27.2rem;
   margin-top: -5rem; }
 
 *,
