--- a/scss/pages/_people.scss
+++ b/scss/pages/_people.scss
@@ -253,7 +253,7 @@ margin-left:-0.5rem;
             color:  rgba(0,0,0 , 0.5);
           }
          }
-         .btn {
+         .btn1 {
            height: 36px;
             width: 15rem;
             outline: none;
