--- a/scss/pages/_termsofservice.scss
+++ b/scss/pages/_termsofservice.scss
@@ -8,10 +8,11 @@
     margin-top: 2%;
 
     &__header {
-        margin-top: 20%;
+        margin-top: 10%;
         font-size: 42px;
         line-height: 49px;
         color: $white;
+        margin-bottom: 40%;
     }
     &__image {
         margin-top: -250%;
@@ -23,15 +24,17 @@
 }
 .termSection {
     @include flex(flex, row);
-    @include body($white, absolute, 8px, 3%, 3%, 100px);
+    @include body($white, absolute, 8px, 15%, 2%, 430px);
     box-shadow: 0px 5px 25px rgba(0, 0, 0, 0.05);
+    width: 80%;
+    margin-left: -5%;
 
     &__text {
         margin-left: 7%;   
     }
     &__input {
-        margin-left: 35%;
-        width: 350px;
+        margin-left: 25%;
+        width: 250px;
         border-radius: 8px;
        
     }
@@ -80,14 +83,15 @@
         &__header {
             font-size: 20px;
             line-height: 27px;
-            margin-top: 20%;
+            margin-top: 30%;
         }
     }
 
     .mobileTermSection {
         @include flex(flex, column);
         @include body($white, absolute, 8px, -20%, 5%, 50%);
-        margin-top: 30%;
+        margin-top: -30%;
+        width: 300px;
 
         &__input {
             width: 250px;
