--- a/scss/layouts/_footer.scss
+++ b/scss/layouts/_footer.scss
@@ -58,7 +58,7 @@
         }
     }
     .media-hop {
-        margin-left: 12rem;
+        margin-left: 8rem;
     }
     .media-lang {
         border: 1px solid grey;
@@ -72,22 +72,23 @@
         margin-left: 2rem;
     }
     .media-terms {
-        margin-left: 10rem;
+        margin-top: 10%;
+        margin-left: 30%;
     }
     .media-push1 {
-        margin-left: 22rem;
+        margin-left: 180px;
     }
     .media-push2 {
-        margin-left: 25.5rem;
+        margin-left: 235px;
     }
     .media-push3 {
-        margin-left: 25rem;
+        margin-left: 230px;
     }
     .media-push4 {
-        margin-left: 25rem;
+        margin-left: 230px;
     }
     .media-push5 {
-        margin-left: 20rem;
+        margin-left: 250px;
     }
     a > i {
         margin-left: 1rem;
@@ -110,5 +111,18 @@
 @media(max-width:580px) {
     .media-footer {
         display: block;
+    }
+    .footer__input {
+        width: 300px;
+        padding: 10px;
+        border-radius: 8px;
+    }
+    .icon {
+        display: flex;
+        flex-direction: row;
+        width: 300px;
+    }
+    .icon2 {
+        width: 10px;
     }
 }
