--- a/components/footer.html
+++ b/components/footer.html
@@ -5,12 +5,14 @@
                 <img src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568412229/samples/figma%20homepage/s2c7y0uy86hmk4bsr6zv.png">
                 <div> <img class="footer-image" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568629227/samples/figma%20homepage/m87et8yszesshavwinf0.png"><span style="margin-right:0.5rem">ENGLISH</span><img src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568639192/samples/figma%20homepage/jp5v0zr7mtuisfme6icx.png"></div>
 
-                <div> <a href="https://facebook.com"><i class="fab fa-facebook"></i></a>
-                    <a href="https://twitter.com"><i class="fab fa-twitter"></i></a>
-                    <a href="https://instagram.com"><i class="fab fa-instagram"></i></a>
-                    <a href="https://linkedin.com"><i class="fab fa-linkedin"></i></a>
-                    <a href="https://youtube.com"><i class="fab fa-youtube"></i></a>
-                    <a href="https://medium.com"><i class="fab fa-medium"></i></a>
+                <div> 
+                        <a href="https://facebook.com"><i class="fa fa-facebook icon2"></i></a>
+                        <a href="https://twitter.com"><i class="fa fa-twitter icon2"></i></a>
+                        <a href="https://instagram.com"><i class="fa fa-instagram icon2"></i></a>
+                        <a href="https://linkedin.com"><i class="fa fa-linkedin icon2"></i></a>
+                        <a href="https://youtube.com"><i class="fa fa-youtube icon2"></i></a>
+                        <a href="https://medium.com"><i class="fa fa-medium icon2"></i></a>
+                    
                 </div>
             </div>
 
