--- a/components/footer.html
+++ b/components/footer.html
@@ -18,7 +18,9 @@
 
             <div class="footer-2">
                 <div>
-                    <p class="footer-line">Hopper</p>
+                    <p class="footer-line">
+                            <a style="color:grey;text-decoration:none;"  href="../pages/home.html">Hopper</a>
+                    </p>
                     <ul>
                         <li> The app</li>
                         <li> Features</li>
@@ -29,7 +31,9 @@
                     </ul>
                 </div>
                 <div>
-                    <p>Company</p>
+                        <p>
+                                <a style="color:grey;text-decoration:none;"  href="../pages/company.html">Company</a>
+                        </p>
                     <ul>
                         <li> About</li>
                         <li> The data</li>
@@ -40,7 +44,9 @@
                 </div>
 
                 <div>
-                    <p>People</p>
+                    <p>
+                            <a style="color:grey;text-decoration:none;"  href="../pages/people.html">People</a>
+                    </p>
                     <ul>
                         <li> Mission</li>
                         <li> Values</li>
