adds header to 404 page: - adds changes to the header.scss file

--- a/components/header.html
+++ b/components/header.html
@@ -1,12 +1,12 @@
 <div class="restriction">
     <nav class="navbar">
-            <a href="./../pages/homepage.html"><img class="headerimg" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569535988/samples/zainabs/ydmeiil3nijuzm2ljmlg.png">
+            <a href="./../pages/homepage.html"><img class="headerimg" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568629226/samples/figma%20homepage/adrb1hvjwo43nmjwn5sm.png">
             </a>
             <ul class="navbar-ul">
                 <li><a href="./../pages/company.html">COMPANY</a></li>
                 <li class="people-nav"><a href="people.html">PEOPLE</a></li>
                 <li><a href="#support">SUPPORT<img  class="support-nav" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568629227/samples/figma%20homepage/qkyithncohhx6pvmgotw.png"></a></li>
-                <li class="send-nav"><a href="#">Send app to your phone</a></li>
+                <li class="send-nav"><a href="#" class="send-nav--mod">Send app to your phone</a></li>
             </ul>
     </nav>
 
