--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -9,6 +9,7 @@
         display: flex;
         margin-left: 1rem;
         margin-top: 5%;
+        // background: rgba(255, 0, 0, 0.5);
         .header-back-img{
             border:thin solid white;
             padding:0.3rem;
@@ -23,11 +24,11 @@
         display: flex;
         width: 50vw;
         justify-content: space-around;
-        margin-top: 1rem;
+        margin-top: 5%;
         a {
             margin-right: 1.5rem;
             text-decoration: none;
-            color: $white;
+            color: rgba(0,0,0, 0.5);
         }
         .people-nav {
             border-right: 0.5px solid $white;
@@ -35,13 +36,20 @@
             margin-right: 1.5rem;
         }
         .send-nav {
-            border: 1px solid $white;
+            border: 2px solid aqua;
+            // color: aqua;
             border-radius: 8px;
             height: 2.5rem;
             width: 16rem;
             padding-left: 1.3rem;
             padding-top: 0.2rem;
             margin-top: -0.2rem;
+            
+            .send-nav--mod {
+                color:rgba(92,236,244,0.9);
+                font-weight: 650;
+                margin-left: 10px;
+            }
         }
         .send-navb {
             border: 1px solid $white;
