--- a/scss/main.scss
+++ b/scss/main.scss
@@ -27,6 +27,7 @@
 @import 'pages/_home'; 
 @import 'pages/_homepage'; 
 @import 'pages/_people'; 
+@import 'pages/_careerlist-2';
 
 @import 'pages/_company-section-2';
 @import 'pages/people-2.scss';
