--- a/scss/pages/_job.scss
+++ b/scss/pages/_job.scss
@@ -135,7 +135,8 @@
                         margin-right: 10px;
 
                     }
-                    p{
+                    p.profile-details{
+                        padding-top: 15px;
                         font-weight: normal;
                         align-self: center;
                         font-size: 14px;
@@ -153,6 +154,7 @@
                 #linkled-first{
                     display: flex;
                     padding-left: 10px;
+
                     width: 80%;
                     background-color: #f0f0f0;
                     height: 100%;
@@ -166,7 +168,8 @@
                         align-self: center;
                         margin-right: 10px;     
                     }
-                    p{
+                    p.profile-details{
+                        padding-top: 15px;
                         font-weight: normal;
                         align-self: center;
                         font-size: 14px;
@@ -174,6 +177,7 @@
                     
                 }
                 #linkled-second{
+                    
                     padding-left: 10px;
                     p{
                         font-size: 11px;
