--- a/css/main.css
+++ b/css/main.css
@@ -426,13 +426,59 @@ body {
   padding: 0;
   box-sizing: border-box; }
 
-.body {
+.w404 {
   overflow-x: hidden;
   overflow-y: scroll;
   font-family: 'Proxima-Nova', sans-serif; }
-  .body .main1 {
-    width: 85%; }
-    .body .main1 .blue_cloud {
+  .w404 .navWrapperItems {
+    display: flex;
+    width: 95%;
+    margin: 0 auto;
+    margin-top: 55px;
+    justify-content: space-around; }
+    @media (max-width: 599px) {
+      .w404 .navWrapperItems .logo {
+        display: none; } }
+    .w404 .navWrapperItems .navListItems {
+      display: flex; }
+      .w404 .navWrapperItems .navListItems .item {
+        padding-right: 40px;
+        color: rgba(0, 0, 0, 0.5);
+        align-self: center;
+        font-size: 20px; }
+        @media (max-width: 599px) {
+          .w404 .navWrapperItems .navListItems .item {
+            display: none; } }
+        .w404 .navWrapperItems .navListItems .item .uparr {
+          margin-left: 6px;
+          font-size: 5%;
+          align-self: flex-start; }
+      .w404 .navWrapperItems .navListItems .item:last-child {
+        color: aqua;
+        border: 2px solid aqua;
+        border-radius: 8px;
+        width: 19rem;
+        text-align: center; }
+  .w404 .nav-mob {
+    display: none; }
+    @media (max-width: 599px) {
+      .w404 .nav-mob {
+        display: flex;
+        justify-content: space-between;
+        max-width: 85%;
+        margin: 0 auto;
+        overflow-x: hidden;
+        align-self: baseline; } }
+    @media (max-width: 599px) {
+      .w404 .nav-mob .menu .line {
+        background: black;
+        width: 30px;
+        height: 3px;
+        margin: 3px; } }
+  .w404 .main1 {
+    width: 85%;
+    font-family: 'Proxima-Nova', sans-serif; }
+    .w404 .main1 .blue_cloud {
       z-index: -1;
       max-width: 99.95vw;
       height: 55%;
@@ -441,92 +487,92 @@ body {
       top: 100px;
       margin-bottom: 100px; }
       @media (max-width: 599px) {
-        .body .main1 .blue_cloud {
+        .w404 .main1 .blue_cloud {
           display: none; } }
-    .body .main1 .w404_img {
+    .w404 .main1 .w404_img {
       display: flex;
       justify-content: space-around;
       position: absolute;
       top: 0;
-      margin-left: 7%; }
-      .body .main1 .w404_img .w404_img__txt {
+      margin-left: 7%;
+      margin-top: 2%; }
+      .w404 .main1 .w404_img .w404_img__txt {
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
         width: 50%;
         margin-top: 130px; }
-        .body .main1 .w404_img .w404_img__txt .w404__img--txtt {
+        .w404 .main1 .w404_img .w404_img__txt .w404__img--txtt {
           font-size: 46px;
           font-weight: 700;
-          width: 90%;
+          width: 93%;
           line-height: 1.2;
           word-spacing: 5px;
           color: rgba(0, 0, 0, 0.8);
           margin-top: 6rem;
           margin: 0 0 20px 0px; }
-        .body .main1 .w404_img .w404_img__txt .w404__img--txttt {
-          width: 75%;
+        .w404 .main1 .w404_img .w404_img__txt .w404__img--txttt {
+          width: 78%;
           font-size: 23px;
           font-weight: 100;
           color: lightgrey;
           line-height: 1.3;
           margin-left: -79px; }
-          .body .main1 .w404_img .w404_img__txt .w404__img--txttt a {
+          .w404 .main1 .w404_img .w404_img__txt .w404__img--txttt a {
             text-decoration: none;
             color: aqua; }
-      .body .main1 .w404_img .img--space_rabbit {
-        margin-top: 12.0%;
+      .w404 .main1 .w404_img .img--space_rabbit {
+        margin-top: 10.0%;
         margin-right: 15%;
         width: 40%;
         height: 40%; }
       @media (max-width: 599px) {
-        .body .main1 .w404_img {
+        .w404 .main1 .w404_img {
           display: none; } }
-  .body .w404_mob {
+  .w404 .w404_mob {
     display: none; }
-    .body .w404_mob a {
+    .w404 .w404_mob a {
       color: aqua;
       text-decoration: none; }
     @media (max-width: 599px) {
-      .body .w404_mob {
+      .w404 .w404_mob {
         display: flex;
         flex-direction: column;
         width: 90%;
         margin: 0 auto; } }
     @media (max-width: 599px) {
-      .body .w404_mob .w404_mob--txt {
-        text-align: center;
-        margin: 15px; } }
+      .w404 .w404_mob .w404_mob--txt {
+        width: 90vw;
+        margin: 0 auto;
+        margin: 30px 0 20px 0; } }
     @media (max-width: 599px) {
-      .body .w404_mob .w404_mob--txt a {
+      .w404 .w404_mob .w404_mob--txt a {
         color: aqua; } }
     @media (max-width: 599px) {
-      .body .w404_mob .w404_mob--txtt {
-        width: 98%;
+      .w404 .w404_mob .w404_mob--txtt {
+        width: 90vw;
         margin: 0 auto;
         text-align: center;
-        margin: 15px 0 15px 0;
         line-height: 1.2;
         color: lightgrey; } }
     @media (max-width: 599px) {
-      .body .w404_mob .space_rabbit--mob {
+      .w404 .w404_mob .space_rabbit--mob {
         width: 60%;
         margin: 0 auto;
         margin-top: 15px; } }
+
+.r-footer {
+  width: 90%;
+  margin: 0 auto; }
 
 .navbar {
   display: flex;
   justify-content: space-between;
   overflow: hidden;
   align-items: baseline;
-<<<<<<< HEAD
   margin-top: 2rem;
   padding-top: 2rem; }
-=======
-  width: 85%;
-  margin: 0 auto; }
->>>>>>> adds header to 404 page:
   .navbar .header-b-back {
     display: flex;
     margin-left: 1rem;
@@ -536,7 +582,8 @@ body {
       padding: 0.3rem; }
   .navbar .headerimg {
     margin-top: 1rem;
-    margin-left: 12rem; }
+    margin-left: 12rem;
+    background-image: url("https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569535988/samples/zainabs/ydmeiil3nijuzm2ljmlg.png") no-repeat; }
   .navbar .navbar-ul {
     display: flex;
     width: 50vw;
